# ferrix

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
crds/: Cargo.toml
crds/src/: ingressroute.rs  lib.rs  main.rs
proxy/: Cargo.toml
proxy/src/: main.rs
proxy/src/api/: handlers.rs  mod.rs  router.rs  schemas.rs
proxy/src/gateway/: mod.rs
proxy/src/k8s/: endpoints.rs  mod.rs  watcher.rs
proxy/src/load_balancer/: mod.rs
proxy/src/server/: config.rs  entry_point.rs  mod.rs
