[workspace]
resolver = "2"
members = [
    "./proxy",
    "./crds"
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false

[workspace.dependencies]
clap = { version = "4.5.23", features = ["derive"] }
kube = { version = "0.91.0", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
schemars = "0.8.6"
serde = { version = "1.0.216", features = ["derive"] }
serde_yml = "0.0.12"
