[package]
name = "crds"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
kube = { workspace = true, features = ["derive", "runtime"] }
k8s-openapi = { workspace = true, features = ["latest"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.134"
serde_yml = { workspace = true }
