[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.84"
axum = "0.8.1"
crds = { path = "../crds" }
clap = { workspace = true, features = ["derive"] }
dashmap = "6.1.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
kube = { workspace = true, features = ["derive", "runtime"] }
k8s-openapi = { workspace = true, features = ["latest"] }
log = "0.4.22"
nix = { version = "0.29.0", features = ["signal"] }
pingora = { version = "0.4.0", features = ["lb"] }
serde = { workspace = true, features = ["derive"] }
serde_yml = { workspace = true }
thiserror = "2.0.6"
tokio = "1.42.0"
